--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-background:url(assets/bg.jpeg) center center no-repeat fixed;
+background:url(bg.jpeg) center center no-repeat fixed;
 background-size: cover;
 /*font-family: 'Lobster', cursive;*/
 font-family: 'Montserrat', sans-serif;
