--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-background:url(bg.jpeg) center center no-repeat fixed;
+background:url('https://sailok.github.io/sailok/bg.jpeg')center center no-repeat fixed;
 background-size: cover;
 /*font-family: 'Lobster', cursive;*/
 font-family: 'Montserrat', sans-serif;
