--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
 background:url( '../bg.jpeg' ) center center no-repeat fixed;
 background-size: cover;
+background-position: relative;
 /*font-family: 'Lobster', cursive;*/
 font-family: 'Montserrat', sans-serif;
 }
